--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5.9"
+    "php": ">=5.5.9",
+    "guzzlehttp/guzzle": "^6.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
