Modify travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ php:
   - '7.0'
   - hhvm
   - nightly
+
+before_script:
+  - composer self-update
+  - composer install --no-interaction --prefer-source --dev
+
+script: phpunit
