Update authors in README and composer

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
     {
       "name": "Nathan King",
       "email": "nkvherus@gmail.com"
+    },
+    {
+      "name": "Darien Livermore",
+      "email": "daz.livermore@gmail.com"
     }
   ],
   "require": {
