--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "guzzlehttp/guzzle": "^6.1"
+    "guzzlehttp/guzzle": "^6.1",
+    "jms/serializer": "^1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
