--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vherus/mxtoolbox-php-api",
+  "name": "mxtoolbox-php/api",
   "description": "PHP wrapper for the MxToolbox API that aims to offer all of the functionality available from the raw API.",
   "type": "library",
   "keywords": ["mxtoolbox", "mx", "api", "wrapper", "php", "dns"],
